BAAAS-POC: added alternative representation of deploy status fixed versions table wrapping

--- a/packages/online-editor/src/editor/TestAndDeploy/TestAndDeploy.scss
+++ b/packages/online-editor/src/editor/TestAndDeploy/TestAndDeploy.scss
@@ -177,10 +177,6 @@ $mobileHeaderHeight: 108px;
       );
       z-index: 100;
     }
-    #deploy-tab-content {
-      height: 100%;
-      display: flex;
-    }
   }
   &__tabs-scroll {
     height: 100%;
